feat:  animated card when it loads
- Created functions.js module for functions
- added animation for card
- included configuration in .eslintrc for raising error when console methods

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "prefer-arrow-callback": "off",
     "callback-return": "off",
     "no-useless-escape": "off",
-    "prefer-spread": "off"
+    "prefer-spread": "off",
+    "no-console": "error"
   }
 }
