--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,1 +1,10 @@
-> .25%
+[production]
+> 0.25%
+not dead
+not IE 11
+not op_mini all
+
+[development]
+last 2 chrome version
+last 2 firefox version
+last 2 safari version
