--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mycolorconverter",
   "version": "1.0.0",
   "description": "The application can be used to convert either HEX to RGB or RGB to HEX",
+  "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack"
+    "start": "vite serve --port 5000",
+    "build": "vite build --mode='production'",
+    "preview": "vite --port 5050"
   },
   "repository": {
     "type": "git",
@@ -26,24 +27,13 @@
   },
   "homepage": "https://github.com/Rahulbaran/myColorConverter#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
+    "@vitejs/plugin-legacy": "^2.2.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss": "^8.4.16",
-    "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.8",
-    "sass-loader": "^13.0.2",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "vite": "^3.1.3"
   }
 }
