--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "mycolorconverter",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "The application can be used to convert either HEX to RGB or RGB to HEX",
-  "private": true,
+  "private": false,
   "scripts": {
+    "test": "vitest",
+    "test-coverage": "vitest --coverage",
+    "test-in-browser": "vitest --ui",
     "start": "vite serve --port 5000",
     "build": "vite build --mode='production'",
     "preview": "vite --port 5050"
@@ -34,6 +37,7 @@
     "postcss-preset-env": "^7.8.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.8",
-    "vite": "^3.1.3"
+    "vite": "^3.1.3",
+    "vitest": "^0.23.4"
   }
 }
