--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The application can be used to convert either HEX to RGB or RGB to HEX",
   "private": false,
   "scripts": {
-    "test": "vitest",
-    "test-coverage": "vitest --coverage",
+    "test": "vitest run --segfault-retry=3",
+    "test-coverage": "vitest run --coverage",
     "test-in-browser": "vitest --ui",
     "start": "vite serve --port 5000",
     "build": "vite build --mode='production'",
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/Rahulbaran/myColorConverter#readme",
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.2.0",
+    "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
