--- a/package.json
+++ b/package.json
@@ -29,6 +29,19 @@
     "url": "https://github.com/Rahulbaran/myColorConverter/issues"
   },
   "homepage": "https://github.com/Rahulbaran/myColorConverter#readme",
+  "browserslist": {
+    "production": [
+      "> .25%",
+      "not dead",
+      "not op_mini all",
+      "not IE 11"
+    ],
+    "development": [
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version"
+    ]
+  },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.2.0",
     "@vitest/coverage-c8": "^0.23.4",
